force-app/main/default/objects/AML_Alerts__c/AML_Alerts__c.object-meta.xml
<CustomObject>
    <label>Alerta AML</label>
    <nameField>
        <label>Tipo de alerta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alertas AML</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>