force-app/main/default/objects/AML_Alerts__c/fields/AMLCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AMLCreatedDate__c</fullName>
    <description>Fecha de creación en AML</description>
    <label>Fecha de creación en AML</label>
    <type>DateTime</type>
</CustomField>