force-app/main/default/objects/AML_Alerts__c/fields/AMLLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>AMLLastModifiedDate__c</fullName>
    <description>Fecha de última modificación en AML</description>
    <label>Fecha de modificación en AML</label>
    <type>DateTime</type>
</CustomField>