force-app/main/default/objects/AML_Alerts__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <description>Estado de confirmación de la alerta</description>
    <label>Estado de confirmación de la alerta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>