force-app/main/default/objects/AML_Alerts__c/fields/ExternalAccountNum__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountNum__c</fullName>
    <description>Numero identificador del cliente en los sistemas externos a AML</description>
    <externalId>true</externalId>
    <label>Nº Identificador externo cliente</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>