force-app/main/default/objects/AML_Alerts__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Número de identificador de la alerta en los sistemas internos de AML</description>
    <externalId>true</externalId>
    <inlineHelpText>Número de identificador de la alerta en los sistemas internos de AML</inlineHelpText>
    <label>Id Externo</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>