force-app/main/default/objects/AML_Alerts__c/fields/OfficalAccountIdType__c.field-meta.xml
<CustomField>
    <fullName>OfficalAccountIdType__c</fullName>
    <description>Tipo de identificación oficial del cliente</description>
    <label>Tipo identificador oficial cliente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <default>true</default>
                <label>Documento Nacional de Identidad</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Número de Tarjeta de Residencia</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Número de Pasaporte</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Código de Identificación Fiscal</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Número de Identidad del Extranjero</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Otros documentos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>