force-app/main/default/objects/AML_Alerts__c/fields/OfficialAccountNum__c.field-meta.xml
<CustomField>
    <fullName>OfficialAccountNum__c</fullName>
    <description>Número de la identificación oficial del cliente</description>
    <externalId>true</externalId>
    <label>Nº Identificador cliente</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>