force-app/main/default/objects/AML_Alerts__c/fields/PublicComments__c.field-meta.xml
<CustomField>
    <fullName>PublicComments__c</fullName>
    <description>Notas existentes dentro del detalle de la alerta.</description>
    <inlineHelpText>Notas existentes dentro del detalle de la alerta. Comentarios separados por el separador #</inlineHelpText>
    <label>Notas</label>
    <type>TextArea</type>
</CustomField>