force-app/main/default/objects/AML_Alerts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXPIRED</fullName>
                <label>Alerta Expirada</label>
            </value>
            <value>
                <fullName>OPEN</fullName>
                <default>true</default>
                <label>Alerta Abierta</label>
            </value>
            <value>
                <fullName>PROCESS</fullName>
                <label>Alerta En Proceso</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Alerta Cerrada</label>
            </value>
            <value>
                <fullName>TRANSFERED</fullName>
                <label>Alerta Transferida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>